--- a/style.css
+++ b/style.css
@@ -1,7 +1,20 @@
-body  {
-    background-color: #35353d;
-    ;
+html, body {
+    height: 100%;
+    margin: 0;
 }
+
+body {
+    background-color: #35353d;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+
+main {
+    flex: 1;
+}
+
+
 nav {
     background-color: #9bbbd9;
  
@@ -16,7 +29,11 @@ nav {
 
 
 
-#coverthing {
-        background-color: white;
-    height: 100%;
+.fortnite {
+    position: relative;
+    margin-top: 10%;
+    height: 500px;
+    width: 300px;
 }
+
+
