--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
+h1 {
+    color: #ff69c3
+}
+
 html, body {
+    width: 100%;
     height: 100%;
     margin: 0;
 }
@@ -6,8 +11,12 @@ html, body {
 body {
     background-color: #35353d;
     display: flex;
-    flex-direction: column;
-    min-height: 100vh;
+     justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            flex-direction: column;
+            gap: 20px;
 }
 
 main {
@@ -15,9 +24,9 @@ main {
 }
 
 
-nav {
+nav, #nav {
     background-color: #9bbbd9;
- 
+    width: 1000px;
 }
 
 .h1 {
@@ -29,11 +38,100 @@ nav {
 
 
 
-.fortnite {
+.game-area {
+    width: 600px;
+    height: 400px;
+    border: 1px solid #ccc;
+    padding: 10px;
     position: relative;
-    margin-top: 10%;
-    height: 500px;
-    width: 300px;
+    background-color: #f9f9f9;
+}
+
+#shape {
+    position: absolute;
 }
 
 
+.container {
+   
+    background-color: #9bbbd9;
+}
+
+#menu {
+    height: 40%;
+    width: 225px;
+   
+}
+
+
+:root{
+    --bg-color-1: #ff69c3;
+    --bg-color-2: #71b1ec;
+    --bg-color-3: #35353d;
+    --padding: 1rem 4rem;
+    --font-family: monospace;
+    --step: 0.5rem;
+    }
+    
+    /* transform: translate3d(-0.5rem, -0.5rem, 0) */
+    button:is(:hover, :focus-visible) {
+    --active: 1;
+    }
+    
+    button {
+    --active: 0;
+    color: white;
+    border-radius: 4px;
+    position: relative;
+    cursor: pointer;
+    font-family: var(--font-family);
+    font-weight: bold;
+    border: 0;
+    background: transparent;
+    padding: 0;
+    }
+    
+    button span:first-of-type {
+    padding: var(--padding);
+    }
+    
+    button span:not(:first-of-type) {
+    position: absolute;
+    }
+    
+    [aria-hidden] { color: transparent; }
+    button span {
+    inset: 0;
+    display: grid;
+    background: var(--bg);
+    place-items: center;
+    transition: 0.2s ease;
+    border: 2px solid black;
+    /* transform:
+    translate(
+    calc((var(--active) * var(--coefficient, 0)) * (var(--step) * -1)),
+    calc((var(--active) * var(--coefficient, 0)) * (var(--step) * -1))
+    ); */
+    translate:
+    calc((var(--active) * var(--coefficient, 0)) * (var(--step) * -1))
+    calc((var(--active) * var(--coefficient, 0)) * (var(--step) * -1))
+    ;
+    }
+    
+    span:nth-of-type(1) {
+    --bg: var(--bg-color-3);
+    }
+    
+    span:nth-of-type(2) {
+    --coefficient: 1;
+    --bg: var(--bg-color-2);
+    }
+    
+    span:nth-of-type(3) {
+    --coefficient: 2;
+    --bg: var(--bg-color-1);
+    }
+    
+    button:active {
+    --active: 0.5;
+    } 
